# CloudDrive

./: .gitignore
cloud-drive/: CMakeLists.txt  README.md  main.cpp
cloud-drive-frontend/: index.html  package-lock.json  package.json  vite.config.js
cloud-drive-frontend/src/: main.js  style.css
cloud-drive-frontend/src/api/: file.js  recycle.js  share.js  user.js
cloud-drive-frontend/src/router/: index.js
cloud-drive-frontend/src/store/: user.js
cloud-drive-frontend/src/utils/: helpers.js  request.js
cloud-drive-frontend/src/views/: FileList.vue  Layout.vue  Login.vue  MyShares.vue  RecycleBin.vue  Register.vue  Settings.vue
cloud-drive-frontend/src/views/share/: SharePage.vue
cloud-drive/config/: config.json
cloud-drive/controllers/: FileController.cpp  FileController.h  RecycleController.cpp  RecycleController.h  ShareController.cpp  ShareController.h  UserController.cpp  UserController.h
cloud-drive/middlewares/: AuthMiddleware.cpp  AuthMiddleware.h  RateLimitMiddleware.cpp  RateLimitMiddleware.h
cloud-drive/models/: File.cpp  File.h  Share.cpp  Share.h  User.cpp  User.h
cloud-drive/plugins/: RedisPlugin.cpp  RedisPlugin.h
cloud-drive/services/: AuthService.cpp  AuthService.h
cloud-drive/sql/: file_tables.sql
cloud-drive/utils/: CodeUtil.cpp  CodeUtil.h  FileUtil.cpp  FileUtil.h  HashUtil.cpp  HashUtil.h  JwtUtil.cpp  JwtUtil.h  ResponseUtil.cpp  ResponseUtil.h  ValidatorUtil.cpp  ValidatorUtil.h
